# radar-hazard-service

./: .gitignore  pyproject.toml  readme.md
cpp/: CMakeLists.txt  README.md
cpp/data/: descriptor_tables.json  sample_config.json  sample_echo_tops.csv
cpp/include/radar/: bufr_decoder.h  cell_grid.h  cluster_analyzer.h  config.h  contour_merger.h  echo_tops.h  geo_utils.h  image_renderer.h  json.h
cpp/src/: bufr_decoder.cpp  cell_grid.cpp  cluster_analyzer.cpp  config.cpp  contour_merger.cpp  echo_tops.cpp  geo_utils.cpp  image_renderer.cpp  json.cpp  main.cpp
src/fastapi/: __init__.py  testclient.py
src/radar_hazard_service/: __init__.py  main.py  models.py  service.py
tests/: test_api.py  test_service.py
